--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.0.0",
     "openzeppelin-solidity": "^3.2.0",
+    "solc": "^0.6.12",
     "truffle": "^5.1.47"
   },
   "devDependencies": {},
